--- a/caddy.service
+++ b/caddy.service
@@ -6,6 +6,7 @@ Wants=network-online.target systemd-networkd-wait-online.service
 
 ; Do not allow the process to be restarted in a tight loop. If the
 ; process fails to start, something critical needs to be fixed.
+; ZeNiX
 StartLimitIntervalSec=14400
 StartLimitBurst=10
 
